--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-        <section>0</section>
+        <section>home</section>
         <section></section>
         <section></section>
         <section></section>
