--- a/home.html
+++ b/home.html
@@ -1,5 +1,72 @@
-        <section>home</section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="home-sec1" style="background-image: url(./images/Manuscript/Gif-VideoID-_GBw7lBfMkM.gif)">
+            <div class="home-sec1-container">
+                <div class="home-sec1-container-display">
+                    <h2>Our Brand</h2>
+                    <h3>See more,Hear more</h3>
+                    <button>Find Out More</button>
+                </div>
+            </div>
+        </section>
+        <section class="home-sec2" style="background-image: url(./images/Manuscript/main-page_v3_03.jpg);">
+            <div class="home-sec2-container">
+                <div class="home-sec2-container-display">
+                    <h2>About Optoma</h2>
+                    <h3>
+                        We deliver engagaging visual and audio<br>
+                        experiences for a connected world.
+                    </h3>
+                    <button>Find Out More</button>
+                </div>
+            </div>
+        </section>
+        <section class="home-sec3" style="background-image: url(./images/Manuscript/main-page_v3_04-2.jpg)">
+            <div class="home-sec3-container">
+                <h2>Applications</h2>
+                <button>Find Out More</button>
+                <div id="silck-applications">
+                    <div class="silck-item">
+                        <figure>
+                            <img>
+                        </figure>
+                        <h3>
+                            <a>${silck.applications.heading}</a>
+                        </h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="home-sec4" style="background-image: url(./images/Manuscript/main-page_v3_15.jpg);">
+            <div class="home-sec4-container">
+                <div class="home-sec4-container-display">
+                    <h2>
+                        Leading through<br>
+                        Innovation
+                    </h2>
+                    <h3>Dream. Create. Inspire</h3>
+                    <button>Learn More</button>
+                </div>
+            </div>
+        </section>
+        <section class="home-sec5" style="background-image: url(./images/Manuscript/main-page_v3_06-2.jpg)">
+            <div class="home-sec5-container">
+                <h2>Optoma Design</h2>
+                <h3>Elegace. Complexity Simplified.</h3>
+                <button>Find Out More</button>
+                <div class="home-sec5-container-row">
+                    <div class="home-sec5-container-row-col">
+                        <a>
+                            <img src="" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="home-sec6" style="background-image: url(./images/Manuscript/main-page_v3_27.jpg)">
+            <div class="home-sec6-container">
+                <div class="home-sec6-container-display">
+                    <h2>Knowledge Center</h2>
+                    <h3>The cool facts about large display and audio.</h3>
+                    <button>Find Out More</button>
+                </div>
+            </div>
+        </section>
