--- a/knowledge.html
+++ b/knowledge.html
@@ -1,4 +1,4 @@
-<section class="knowledge-sec1" style="background-image: url(./images/Manuscript/Knowledge_02.jpg);">
+<section class="knowledge-sec1" style="background-image: url(./images/Manuscript/Knowledge_01.jpg);">
     <div class="knowledge-sec1-container">
         <div class="knowledge-sec1-container-display">
             <h2>Knowledge Center</h2>
@@ -16,16 +16,17 @@
             <div class="knowledge-sec2_video">
                 <div class="knowledge-sec2_video-formGroup">
                     <form>
-                        <label></label>
                         <input type="text">
-                        <input type="submit">
+                        <button type="submit"></button>
                     </form>
                 </div>
                 <div class="knowledge-sec2_video-row">
                     <div class="knowledge-sec2_video-row-col-1">
-                        <img>
-                        <h4></h4>
-                        <p></p>
+                        <figure>
+                            <div></div>
+                            <h4></h4>
+                            <p></p>
+                        </figure>
                     </div>
                 </div>
             </div>
