--- a/knowledge.html
+++ b/knowledge.html
@@ -12,7 +12,7 @@
             Here you will find the latest new trends in the audio and visual world,with access to articles, videos,
             white papers and more.
         </h3>
-        <div class="knowledge-sec2-container-video" id="video-search">
+        <div class="knowledge-sec2-container-video">
             <div class="knowledge-sec2_video">
                 <div class="knowledge-sec2_video-formGroup">
                     <form>
@@ -20,7 +20,7 @@
                         <button type="submit"></button>
                     </form>
                 </div>
-                <div class="knowledge-sec2_video-row">
+                <div class="knowledge-sec2_video-row" id="video-area">
                     <div class="knowledge-sec2_video-row-col-1">
                         <figure>
                             <div></div>
