新增 applications 修改 knowledge render 邏輯

--- a/knowledge.html
+++ b/knowledge.html
@@ -14,11 +14,13 @@
         </h3>
         <div class="knowledge-sec2-container-video">
             <div class="knowledge-sec2_video">
-                <div class="knowledge-sec2_video-formGroup">
-                    <form>
-                        <input type="text">
-                        <button type="submit"></button>
-                    </form>
+                <div class="knowledge-sec2_video-buttonGroup">
+                    <button type="button">
+                        <span></span>
+                        <span>
+                            <i></i>
+                        </span>
+                    </button>
                 </div>
                 <div class="knowledge-sec2_video-row" id="video-area">
                     <div class="knowledge-sec2_video-row-col-1">
