--- a/home.html
+++ b/home.html
@@ -1,4 +1,6 @@
-        <section class="home-sec1" style="background-image: url(./images/Manuscript/Gif-VideoID-_GBw7lBfMkM.gif)">
+        <section class="home-sec1">
+            <div class="home-sec1-bgUpper" style="background-image: url(./images/home/star-1.jpg)"></div>
+            <div class="home-sec1-bgLower" style="background-image: url(./images/home/star-2.jpg)"></div>
             <div class="home-sec1-container">
                 <div class="home-sec1-container-display">
                     <h2>Our Brand</h2>
@@ -7,7 +9,7 @@
                 </div>
             </div>
         </section>
-        <section class="home-sec2" style="background-image: url(./images/Manuscript/main-page_v3_03.jpg);">
+        <section class="home-sec2" style="background-image: url(./images/home/sec2-bg.png);">
             <div class="home-sec2-container">
                 <div class="home-sec2-container-display">
                     <h2>About Optoma</h2>
@@ -18,8 +20,9 @@
                     <button>Find Out More</button>
                 </div>
             </div>
+            <div class="home-sec2-bg" style="background-image: url(./images/home/sec2-bg.png);"></div>
         </section>
-        <section class="home-sec3" style="background-image: url(./images/Manuscript/main-page_v3_04-2.jpg)">
+        <section class="home-sec3">
             <div class="home-sec3-container">
                 <h2>Applications</h2>
                 <button>Find Out More</button>
@@ -35,7 +38,7 @@
                 </div>
             </div>
         </section>
-        <section class="home-sec4" style="background-image: url(./images/Manuscript/main-page_v3_15.jpg);">
+        <section class="home-sec4" style="background-image: url(./images/home/sec4-bg.jpg);">
             <div class="home-sec4-container">
                 <div class="home-sec4-container-display">
                     <h2>
@@ -47,7 +50,7 @@
                 </div>
             </div>
         </section>
-        <section class="home-sec5" style="background-image: url(./images/Manuscript/main-page_v3_06-2.jpg)">
+        <section class="home-sec5">
             <div class="home-sec5-container">
                 <h2>Optoma Design</h2>
                 <h3>Elegace. Complexity Simplified.</h3>
@@ -61,7 +64,7 @@
                 </div>
             </div>
         </section>
-        <section class="home-sec6" style="background-image: url(./images/Manuscript/main-page_v3_27.jpg)">
+        <section class="home-sec6" style="background-image: url(./images/home/sec6-bg.png)">
             <div class="home-sec6-container">
                 <div class="home-sec6-container-display">
                     <h2>Knowledge Center</h2>
