首頁細節切版

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
                 <div class="home-sec1-container-display">
                     <h2>Our Brand</h2>
                     <h3>See more,Hear more</h3>
-                    <button>Find Out More</button>
+                    <button><span>Find Out More</span></button>
                 </div>
             </div>
         </section>
@@ -17,7 +17,7 @@
                         We deliver engagaging visual and audio<br>
                         experiences for a connected world.
                     </h3>
-                    <button>Find Out More</button>
+                    <button><span>Find Out More</span></button>
                 </div>
             </div>
             <div class="home-sec2-bg" style="background-image: url(./images/home/sec2-bg.png);"></div>
@@ -25,7 +25,7 @@
         <section class="home-sec3">
             <div class="home-sec3-container">
                 <h2>Applications</h2>
-                <button>Find Out More</button>
+                <button class="home-sec3-container-button"><span>Find Out More</span></button>
                 <div id="silck-applications">
                     <div class="silck-item">
                         <figure>
@@ -46,7 +46,7 @@
                         Innovation
                     </h2>
                     <h3>Dream. Create. Inspire</h3>
-                    <button>Learn More</button>
+                    <button><span>Learn More</span></button>
                 </div>
             </div>
         </section>
@@ -54,7 +54,7 @@
             <div class="home-sec5-container">
                 <h2>Optoma Design</h2>
                 <h3>Elegace. Complexity Simplified.</h3>
-                <button>Find Out More</button>
+                <button><span>Find Out More</span></button>
                 <div class="home-sec5-container-row">
                     <div class="home-sec5-container-row-col">
                         <a>
@@ -69,7 +69,7 @@
                 <div class="home-sec6-container-display">
                     <h2>Knowledge Center</h2>
                     <h3>The cool facts about large display and audio.</h3>
-                    <button>Find Out More</button>
+                    <button><span>Find Out More</span></button>
                 </div>
             </div>
         </section>
