首頁細節調整 字型追加 application NavBar&slickJS製作

--- a/applications.html
+++ b/applications.html
@@ -1,14 +1,26 @@
-<section class="applications-sec1">
-    <div class="applications-sec1-container">
-        <div class="applications-sec1-container-display">
-            <h2>Applications</h2>
-            <h3>Delivering comprehensive bing image solutions that enhance communication and reinforce collaboration.</h3>
+<section class="applications-carousel">
+    <div id="banner-applications">
+        <div class="silck-item">
+            <figure>
+                <img src="" alt="">
+                <h2>Applications</h2>
+                <h3>Delivering comprehensive bing image solutions that enhance communication and reinforce collaboration.</h3>
+            </figure>
         </div>
     </div>   
 </section>
 <div>
     <div class="applications-container">
-        <section id="#sec1" class="applications-container-sec">
+        <nav>
+            <ul id="navbar-applications">
+                <div class="silck-item">
+                    <h3>
+                        <a href="" title=""></a>
+                    </h3>
+                </div>
+            </ul>
+        </nav>
+        <section id="sec1" class="applications-container-sec">
             <div class="applications-container-sec-heading"></div>
             <div class="applications-container-sec-row">
                 <div class="applications-container-sec-row-col">
