--- a/footer.html
+++ b/footer.html
@@ -45,7 +45,7 @@
             </div>
             <div class="footer-container-line"></div>
             <div class="footer-container-copyright">
-                Copyright © 2019 Optoma Corporation. All rights reghts reserved. Terms and Conditions of Use
+                Copyright © 2019 Optoma Corporation.<br class="footer-container-copyright-br"> All rights reghts reserved. Terms and Conditions of Use
             </div>
         </div>
     </footer>
