application 頁面製作及事件邏輯

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         <section class="home-sec3">
             <div class="home-sec3-container">
                 <h2>Applications</h2>
-                <button class="home-sec3-container-button"><span>Find Out More</span></button>
+                <button type="button" class="home-sec3-container-button"><a href="./index.php?page=applications">Find Out More</a href="./index.php?page=1"></button>
                 <div id="silck-applications">
                     <div class="silck-item">
                         <figure>
