按紐錯誤修正

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
                 <div class="home-sec1-container-display">
                     <h2>Our Brand</h2>
                     <h3>See more,Hear more</h3>
-                    <button><span>Find Out More</span></button>
+                    <button><a>Find Out More</a></button>
                 </div>
             </div>
         </section>
@@ -17,7 +17,7 @@
                         We deliver engagaging visual and audio<br>
                         experiences for a connected world.
                     </h3>
-                    <button><span>Find Out More</span></button>
+                    <button><a>Find Out More</a></button>
                 </div>
             </div>
             <div class="home-sec2-bg" style="background-image: url(./images/home/sec2-bg.png);"></div>
