--- a/about.html
+++ b/about.html
@@ -70,7 +70,36 @@
                 </div>
             </div>
         </section>
-        <section class="about-sec5"></section>
+        <section class="about-sec5" style="background-image: url(./images/about/about-sec5.png);">
+            <div class="about-sec5-container">
+                <div class="about-sec5-container-display">
+                    <h2>Corporate Overview</h2>
+                    <p>Optoma is a leading brand in projection solutions and consumer audio markets serving partners and customers across 159 countries worldwide.</p>
+                    <small>*PMA Research 2019 1H Report</small>
+                </div>
+                <div class="about-sec5-container-row">
+                    <div class="about-sec5-container-row-col">
+                        <div class="about-sec5-container-row-col-number">159+</div>
+                        <div class="about-sec5-container-row-col-line"></div>
+                        <div class="about-sec5-container-row-col-text">Serviced Countries</div>
+                    </div>
+                    <div class="about-sec5-container-row-col">
+                        <div class="about-sec5-container-row-col-number">204+</div>
+                        <div class="about-sec5-container-row-col-line"></div>
+                        <div class="about-sec5-container-row-col-text">Service Centers Worldwide</div>
+                    </div>
+                    <div class="about-sec5-container-row-col">
+                        <div class="about-sec5-container-row-col-number">#1</div>
+                        <div class="about-sec5-container-row-col-line"></div>
+                        <div class="about-sec5-container-row-col-text">*4K UHD Brand Worldwide</div>
+                    </div>
+                    <div class="about-sec5-container-row-col">
+                        <div class="about-sec5-container-row-col-number">#3</div>
+                        <div class="about-sec5-container-row-col-line"></div>
+                        <div class="about-sec5-container-row-col-text">*Home Segment Brand Worldwide</div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="about-sec6"></section>
         <section class="about-sec7"></section>
-        <section class="about-sec8"></section>
