解決about page 的 time line

--- a/about.html
+++ b/about.html
@@ -101,5 +101,70 @@
                 </div>
             </div>
         </section>
-        <section class="about-sec6"></section>
-        <section class="about-sec7"></section>
+        <section class="about-sec6">
+            <div class="about-sec6-container">
+                <div class="about-sec6-container-display">
+                    <h2>A Total Large Display Solution Provider</h2>
+                    <p>Optoma offers the right solution to optimize the image quality of the dynamic content for your application, whether it is projected from a compact projector or as a permanently installed display device. 
+                        <br/>Optoma has vast experiences in providing support and innovative solutions across the ProAV, commercial and home sectors.</p>
+                </div>
+                <div class="about-sec6-container-row">
+                    <div class="about-sec6-container-row-col">
+                        <figure>
+                            <img src="./images/about/about-sec6-img1.png" alt="">
+                            <figcaption>ProAV</figcaption>
+                        </figure>
+                    </div>
+                    <div class="about-sec6-container-row-col">
+                        <figure>
+                            <img src="./images/about/about-sec6-img2.png" alt="">
+                            <figcaption>Commercial</figcaption>
+                        </figure>
+                    </div>
+                    <div class="about-sec6-container-row-col">
+                        <figure>
+                            <img src="./images/about/about-sec6-img3.png" alt="">
+                            <figcaption>Home</figcaption>
+                        </figure>
+                    </div>
+                    <div class="about-sec6-container-row-col">
+                        <figure>
+                            <img src="./images/about/about-sec6-img4.png" alt="">
+                            <figcaption>LED display</figcaption>
+                        </figure>
+                    </div>
+                    <div class="about-sec6-container-row-col">
+                        <figure>
+                            <img src="./images/about/about-sec6-img5.png" alt="">
+                            <figcaption>Portable</figcaption>
+                        </figure>
+                    </div>
+                    <div class="about-sec6-container-row-col">
+                        <figure>
+                            <img src="./images/about/about-sec6-img6.jpg" alt="">
+                            <figcaption>Interactive Flat Panel</figcaption>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about-sec7">
+            <div class="about-sec7-container">
+                <div class="about-sec7-container-display">
+                    <h2>Milestones</h2>
+                </div>
+                <div id="silck-year">
+                    <div class="silck-item"></div>
+                </div>
+                <div id="silck-about">
+                    <div class="silck-item">
+                        <figure>
+                            <div></div>
+                            <figcaption>
+                                <a href=""></a>
+                            </figcaption>   
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
