--- a/about.html
+++ b/about.html
@@ -27,36 +27,50 @@
             </div>
         </section>
         <section class="about-sec3">
-            <div class="about-sec3-center">
-                <div class="about-sec3-center-circleCenter">
-                    <span>Core<br/>Values</span>
-                </div>
-                <div class="about-sec3-center-heading">
-                    <h4 style="color: #5e6d84;">Reliability</h4>
-                    <p>We advocate reliability from product conception, intuitive designs to state-of-the-art manufacturing, while delivering trustworthy and dependable industry leading expertise and services.light our customers.</p>
-                </div>
-                <div class="about-sec3-center-heading">
-                    <h4 style="color: #305683;">Innovation</h4>
-                    <p>We continuously embrace cutting-edge technologies, forward thinking solutions and processes that are relevant and of genuine value to our customers.</p>
-                </div>
-                <div class="about-sec3-center-heading">
-                    <h4 style="color: #92a9c9;">Customer Focus</h4>
-                    <p>We aspire to bring the most professional and responsible level of service together with user-friendly designs as our long lasting commitment to delight our customers.</p>
-                </div>
+            <div class="about-sec3-text">
+                <h4 style="color: #305683;">Innovation</h4>
+                <p>We continuously embrace cutting-edge technologies, forward thinking solutions and processes that are relevant and of genuine value to our customers.</p>
             </div>
-            <div class="about-sec3-center">
-                <div class="about-sec3-center-circle" style="background-color: #305683;">
-                    <span>Innovation</span>
-                </div>
+            <div class="about-sec3-text">
+                <h4 style="color: #5e6d84;">Reliability</h4>
+                <p>We advocate reliability from product conception, intuitive designs to state-of-the-art manufacturing, while delivering trustworthy and dependable industry leading expertise and services.light our customers.</p>
             </div>
-            <div class="about-sec3-center">
-                <div class="about-sec3-center-circle" style="background-color: #5e6d84;">
-                    <span>Reliability</span>
-                </div>
+            <div class="about-sec3-text">
+                <h4 style="color: #92a9c9;">Customer Focus</h4>
+                <p>We aspire to bring the most professional and responsible level of service together with user-friendly designs as our long lasting commitment to delight our customers.</p>
             </div>
-            <div class="about-sec3-center">
-                <div class="about-sec3-center-circle" style="background-color: #92a9c9;">
-                    <span>Customer<br/>focus</span> 
+            <div class="about-sec3-graphics">
+                <div class="about-sec3-graphics-center">
+                    <div class="about-sec3-graphics-center-circleCenter">
+                        <span>Core<br/>Values</span>
+                    </div>
+                    <div class="about-sec3-graphics-center-heading">
+                        <h4 style="color: #305683;">Innovation</h4>
+                        <p>We continuously embrace cutting-edge technologies, forward thinking solutions and processes that are relevant and of genuine value to our customers.</p>
+                    </div>
+                    <div class="about-sec3-graphics-center-heading">
+                        <h4 style="color: #5e6d84;">Reliability</h4>
+                        <p>We advocate reliability from product conception, intuitive designs to state-of-the-art manufacturing, while delivering trustworthy and dependable industry leading expertise and services.light our customers.</p>
+                    </div>
+                    <div class="about-sec3-graphics-center-heading">
+                        <h4 style="color: #92a9c9;">Customer Focus</h4>
+                        <p>We aspire to bring the most professional and responsible level of service together with user-friendly designs as our long lasting commitment to delight our customers.</p>
+                    </div>
+                </div>
+                <div class="about-sec3-graphics-center">
+                    <div class="about-sec3-graphics-center-circle" style="background-color: #305683;">
+                        <span>Innovation</span>
+                    </div>
+                </div>
+                <div class="about-sec3-graphics-center">
+                    <div class="about-sec3-graphics-center-circle" style="background-color: #5e6d84;">
+                        <span>Reliability</span>
+                    </div>
+                </div>
+                <div class="about-sec3-graphics-center">
+                    <div class="about-sec3-graphics-center-circle" style="background-color: #92a9c9;">
+                        <span>Customer<br/>focus</span> 
+                    </div>
                 </div>
             </div>
         </section>
@@ -111,37 +125,37 @@
                 <div class="about-sec6-container-row">
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <img src="./images/about/about-sec6-img1.png" alt="">
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img1.png);"></div>
                             <figcaption>ProAV</figcaption>
                         </figure>
                     </div>
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <img src="./images/about/about-sec6-img2.png" alt="">
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img2.png);"></div>
                             <figcaption>Commercial</figcaption>
                         </figure>
                     </div>
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <img src="./images/about/about-sec6-img3.png" alt="">
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img3.png);"></div>
                             <figcaption>Home</figcaption>
                         </figure>
                     </div>
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <img src="./images/about/about-sec6-img4.png" alt="">
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img4.png);"></div>
                             <figcaption>LED display</figcaption>
                         </figure>
                     </div>
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <img src="./images/about/about-sec6-img5.png" alt="">
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img5.png);"></div>
                             <figcaption>Portable</figcaption>
                         </figure>
                     </div>
                     <div class="about-sec6-container-row-col">
                         <figure>
-                            <img src="./images/about/about-sec6-img6.jpg" alt="">
+                            <div class="img" style="background-image: url(./images/about/about-sec6-img6.jpg);"></div>
                             <figcaption>Interactive Flat Panel</figcaption>
                         </figure>
                     </div>
@@ -159,7 +173,7 @@
                 <div id="silck-about">
                     <div class="silck-item">
                         <figure>
-                            <div></div>
+                            <div class="year"></div>
                             <figcaption>
                                 <a href=""></a>
                             </figcaption>   
