--- a/header.html
+++ b/header.html
@@ -11,15 +11,15 @@
             </button>
             <ul class="header_navbar-ul">
                 <li class="header_navbar-ul-dropdown">
-                    <a class="header_navbar-ul-li-link">${node.nodeName}</a>
-                    <ul class="header_dropdown-ul" id="node-${node.nodeId}" data-toggle="dropdown" data-switch="false">
+                    <a class="header_navbar-ul-li-link"></a>
+                    <ul class="header_dropdown-ul" id="" data-toggle="dropdown" data-switch="false">
                         <li class="header_dropdown-ul-li">
-                            <a class="header_dropdown-ul-li-link" title="${childrenNode.title}" href="${childrenNode.href}">${childrenNode.nodeName}</a>
+                            <a class="header_dropdown-ul-li-link" title="" href=""></a>
                         </li>
                     </ul>
                 </li>
                 <li class="header_navbar-ul-li">
-                    <a class="header_navbar-ul-li-link" title="${node.title}" href="${node.href}">${node.nodeName}</a>
+                    <a class="header_navbar-ul-li-link" title="" href=""></a>
                 </li>
             </ul>
         </nav>
