--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
                 <div class="home-sec1-container-display">
                     <h2>Our Brand</h2>
                     <h3>See more,Hear more</h3>
-                    <button><a href="./index.php?page=ourBraud" title="go to our braud page">Find Out More</a></button>
+                    <button><a href="./index.php?page=ourbraud" title="go to our braud page">Find Out More</a></button>
                 </div>
             </div>
         </section>
