--- a/ourBraud.html
+++ b/ourBraud.html
@@ -1,5 +1,5 @@
-<section class="ourBraud">
-    <div id="banner-ourBraud">
+<section class="ourbraud">
+    <div id="banner-ourbraud">
         <div class="silck-item">
             <figure>
                 <img src="" alt="">
@@ -10,10 +10,10 @@
         </div>
     </div>   
 </section>
-<div>
-    <section class="ourBraud-sec">
-            
-    </section>
-</div>
+<section class="ourBraud-sec1"></section>
+<section class="ourBraud-sec2"></section>
+<section class="ourBraud-sec3"></section>
+<section class="ourBraud-sec4"></section>
+<section class="ourBraud-sec5"></section>
 
     
