--- a/ourBraud.html
+++ b/ourBraud.html
@@ -10,10 +10,70 @@
         </div>
     </div>   
 </section>
-<section class="ourBraud-sec1"></section>
-<section class="ourBraud-sec2"></section>
-<section class="ourBraud-sec3"></section>
-<section class="ourBraud-sec4"></section>
-<section class="ourBraud-sec5"></section>
+<section class="ourbraud-sec2">
+    <div class="ourbraud-sec2-container">
+        <h2>Brand Story</h2>
+        <p>
+            Since the creation of film and the moving picture...
+            <br/>Visual and audio storytelling has brought audiences joy and delight all around the world. 
+            <br/>This technology has since evolved into a means in which stories can be instantly created, accessed and shared. As an industry leader for innovative excellence in high-fidelity image and sound reproduction, Optoma also has its own story.
+            <br/>
+            <br/>The word Optoma originated from the combination of two words:
+            <br/>Optical and Maxima. The absolute highest degree of optical realization attainable.
+            <br/>
+            <br/>Aspiring to deliver the biggest and most engaging display possible, Optoma was a pioneer in assembling a team of dedicated DLP® projection color specialists; experts on the forefront of bringing the most vivid and accurate color reproduction to life. As demand grew, so did Optoma; extending its reach to over 150 countries worldwide, truly realizing and establishing a global presence.
+            <br/>
+            <br/>As a true innovator in developing advanced lamp, laser and LED projection solutions, Optoma’s full range of big image solutions embody the relentless pursuit to 
+            <br/>provide the most immersive cinematic experience. Along with the integration of critically acclaimed audio brand Nuforce, Optoma’s audio range offers high-fidelity sound for exceptional listening experiences.
+            <br/>
+            <br/>Today, Optoma is a world leading provider of professional large display solutions for home, corporate, education, and installation markets. 
+            <br/>Guided by a simple vision: “To deliver engaging visual and audio experiences for a connected world,” a vision that resonates with Optoma’s core values. 
+            <br/>The story continues as Optoma advances the boundaries of technology connecting people as they share their stories.
+        </p>
+    </div>
+</section>
+<section class="ourbraud-sec3" style="background-image: url(./images/ourBrand/ourBrand-sec3-bg.jpg)"></section>
+<section class="ourbraud-sec4">
+    <div class="ourbraud-sec4-container">
+        <h2>Awards</h2>
+        <div id="silck-awards">
+            <div class="silck-item">
+                <figure>
+                    <img src="" alt="">
+                </figure>
+                <h3></h3>
+            </div>
+        </div>   
+    </div>
+</section>
+<section class="ourbraud-sec5">
+    <div class="ourbraud-sec5-container">
+        <h2>Worldwide Shows</h2>
+        <div class="ourbraud-sec5-container-row">
+            <div class="ourbraud-sec5-container-row-col">
+                <figure style="background-image: url(./images/ourBrand/ourBrand-sec4-bg.png);"></figure>
+            </div>
+            <div class="ourbraud-sec5-container-row-col">
+                <div class="ourbraud-sec5_table">
+                    <div class="ourbraud-sec5_table-header">
+                        <div class="ourbraud-sec5_table-header-row">
+                            <div class="ourbraud-sec5_table-header-row-col">Date</div>
+                            <div class="ourbraud-sec5_table-header-row-col">Show</div>
+                            <div class="ourbraud-sec5_table-header-row-col">Locations</div>
+                        </div>
+                    </div>
+                    <div class="ourbraud-sec5_table-body">
+                        <div class="ourbraud-sec5_table-body-row">
+                            <div class="ourbraud-sec5_table-body-row-col"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ourbraud-sec5-container-row-col">
+                <figure style="background-image: url(./images/ourBrand/ourBrand-sec4-bg.png);"></figure>
+            </div>
+        </div>
+    </div>
+</section>
 
     
