--- a/footer.html
+++ b/footer.html
@@ -4,34 +4,34 @@
                 <div class="footer-container-row-community">
                     <span class="footer-container-row-community-text">Stay Connocted</span>
                     <div class="footer-container-row-community-icon">
-                        <a class="btn-icon fb">
+                        <a class="btn-icon facebook" href="./index.php?page=social#facebook" data-target="facebook" data-social="true">
                             <img src="./images/icon/social/facebook.svg" alt="facebook">
                         </a>
-                        <a class="btn-icon youtube">
+                        <a class="btn-icon youtube" href="./index.php?page=social#youtube" data-target="youtube" data-social="true">
                             <img src="./images/icon/social/youtube-logotype.svg" alt="youtube">
                         </a>
-                        <a class="btn-icon twitter">
+                        <a class="btn-icon twitter" href="./index.php?page=social#twitter" data-target="twitter" data-social="true">
                             <img src="./images/icon/social/twitter.svg" alt="twitter">
                         </a>
-                        <a class="btn-icon instagram">
+                        <a class="btn-icon instagram" href="./index.php?page=social#instagram" data-target="instagram" data-social="true">
                             <img src="./images/icon/social/instagram.svg" alt="instagram">
                         </a>
-                        <a class="btn-icon linkedin">
+                        <a class="btn-icon linkedin" href="./index.php?page=social#linkedin" data-target="linkedin" data-social="true">
                             <img src="./images/icon/social/linkedin-letters.svg" alt="linkedin">
                         </a>
-                        <a class="btn-icon pinterest">
+                        <a class="btn-icon pinterest" href="./index.php?page=social#pinterest" data-target="pinterest" data-social="true">
                             <img src="./images/icon/social/pinterest.svg" alt="pinterest">
                         </a>
-                        <a class="btn-icon weibo">
+                        <a class="btn-icon weibo" href="./index.php?page=social#weibo" data-target="weibo" data-social="true">
                             <img src="./images/icon/social/sina-weibo.svg" alt="weibo">
                         </a>
-                        <a class="btn-icon wechat">
+                        <a class="btn-icon wechat" href="./index.php?page=social#wechat" data-target="wechat" data-social="true">
                             <img src="./images/icon/social/wechat.svg" alt="wechat">
                         </a>
-                        <a class="btn-icon youku">
+                        <a class="btn-icon youku" href="./index.php?page=social#youku" data-target="youku" data-social="true">
                             <img src="./images/icon/social/youku.svg" alt="youku">
                         </a>
-                        <a class="btn-icon tiktok">
+                        <a class="btn-icon tiktok" href="./index.php?page=social#tiktok" data-target="tiktok" data-social="true">
                             <img src="./images/icon/social/tik-tok.svg" alt="tik tok">
                         </a>
                     </div>
