--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="header-container" id="navbar-main">
-        <nav class="header-container-navbar">
+        <!-- <nav class="header-container-navbar">
             <div class="header_navbar-logo">
                 <a  href="./index.php">
                     <img src="./images/optoma-logo.png" alt="">
@@ -22,6 +22,6 @@
                     <a class="header_navbar-ul-li-link" title="" href=""></a>
                 </li>
             </ul>
-        </nav>
+        </nav> -->
     </div>
 </header>
