design、knowledge 切版

--- a/knowledge.html
+++ b/knowledge.html
@@ -1,4 +1,4 @@
-<section class="knowledge-sec1" style="background-image: url(./images/Manuscript/Knowledge_01.jpg);">
+<section class="knowledge-sec1" style="background-image: url(./images/knowledge/knowledge-banner.jpg);">
     <div class="knowledge-sec1-container">
         <div class="knowledge-sec1-container-display">
             <h2>Knowledge Center</h2>
@@ -22,14 +22,16 @@
                         </span>
                     </button>
                 </div>
-                <div class="knowledge-sec2_video-row" id="video-area">
-                    <div class="knowledge-sec2_video-row-col-1">
-                        <figure>
-                            <div></div>
-                            <h4></h4>
-                            <p></p>
-                        </figure>
-                    </div>
+                <div class="knowledge-sec2_video-row" id="knowledge-area">
+                    <!-- <div class="knowledge-sec2_video-row-col">
+                        <div class="knowledge-sec2_video-row-col-figure">
+                            <figure>
+                                <div></div>
+                                <h4></h4>
+                                <p></p>
+                            </figure>
+                        </div>
+                    </div> -->
                 </div>
             </div>
         </div>
