--- a/innovation.html
+++ b/innovation.html
@@ -1,19 +1,25 @@
-<section class="knowledge-sec1" style="background-image: url(./images/innovation/innovation-banner.jpg);">
-    <div class="knowledge-sec1-container">
-        <div class="knowledge-sec1-container-display">
-            <h2>Innovation</h2>
-        </div>
-    </div>
+<section class="innovation-carousel">
+    <div id="banner-innovation">
+        <!-- <div class="silck-item">
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <div>
+                <h2>Leading through<br/>
+                    Innovation </h2>
+            </div>
+        </div> -->
+    </div>   
 </section>
-<section class="knowledge-sec2">
-    <div class="knowledge-sec2-container">
+<section class="innovation-sec2">
+    <div class="innovation-sec2-container">
         <h2></h2>
         <h3>
             
         </h3>
-        <div class="knowledge-sec2-container-video">
-            <div class="knowledge-sec2_video">
-                <div class="knowledge-sec2_video-buttonGroup">
+        <div class="innovation-sec2-container-video">
+            <div class="innovation-sec2_video">
+                <div class="innovation-sec2_video-buttonGroup">
                     <button type="button">
                         <span></span>
                         <span>
@@ -21,8 +27,8 @@
                         </span>
                     </button>
                 </div>
-                <div class="knowledge-sec2_video-row" id="video-area">
-                    <div class="knowledge-sec2_video-row-col-1">
+                <div class="innovation-sec2_video-row" id="innovation-area">
+                    <div class="innovation-sec2_video-row-col-1">
                         <figure>
                             <div></div>
                             <h4></h4>
@@ -35,3 +41,5 @@
     </div>
 
 </section>
+
+
