--- a/design.html
+++ b/design.html
@@ -1,9 +1,14 @@
-<section class="design-sec1" style="background-image: url(./images/design/design-banner.jpg);">
-    <div class="design-sec1-container">
-        <div class="design-sec1-container-display">
-            <h2>Desing Center</h2>
-        </div>
-    </div>
+<section class="innovation-carousel">
+    <div id="banner-design">
+        <!-- <div class="silck-item">
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <div>
+                <h2>Design Center</h2>
+            </div>
+        </div> -->
+    </div>   
 </section>
 <section class="design-sec2">
     <div class="design-sec2-container">
