--- a/detail.html
+++ b/detail.html
@@ -1,11 +1,20 @@
 <div id="detail">
     <section class="detail-banner">
-        <div class="detail-banner-container"></div>
+        <div class="detail-banner-container">
+            <!--輸出圖片在 background-image-->
+                <div class="detail-banner-container" style="background-image: url(./images/innovation/innovation-img1.png)"></div>
+            </div>
+        </div>
     </section>
     <section class="detail-article">
         <div class="detail-article-container">
-            <div class="detail-article-container-header"></div>
-            <div class="detail-article-container-content"></div>
+            <div class="detail-article-container-header">
+                <h2>Voice assistant<!--主標題--></h2>
+                <h3>Take control of your home theater with voice commands<!--副標題--></h3>
+            </div>
+            <div class="detail-article-container-content">
+                <p>This is paragraph<!--內容--></p>
+            </div>
             <div class="detail-article-container-row">
                 <!-- <div class="detail-article-container-col">
                     <div class="detail-article-container-figure">
