--- a/about.html
+++ b/about.html
@@ -93,22 +93,22 @@
                 </div>
                 <div class="about-sec5-container-row">
                     <div class="about-sec5-container-row-col">
-                        <div class="about-sec5-container-row-col-number">159+</div>
+                        <div class="about-sec5-container-row-col-number"><span id="countries">159</span>+</div>
                         <div class="about-sec5-container-row-col-line"></div>
                         <div class="about-sec5-container-row-col-text">Serviced Countries</div>
                     </div>
                     <div class="about-sec5-container-row-col">
-                        <div class="about-sec5-container-row-col-number">204+</div>
+                        <div class="about-sec5-container-row-col-number"><span id="centers-worldwide">204</span>+</div>
                         <div class="about-sec5-container-row-col-line"></div>
                         <div class="about-sec5-container-row-col-text">Service Centers Worldwide</div>
                     </div>
                     <div class="about-sec5-container-row-col">
-                        <div class="about-sec5-container-row-col-number">#1</div>
+                        <div class="about-sec5-container-row-col-number">#<span id="brandworldwide">1</span></div>
                         <div class="about-sec5-container-row-col-line"></div>
                         <div class="about-sec5-container-row-col-text">*4K UHD Brand Worldwide</div>
                     </div>
                     <div class="about-sec5-container-row-col">
-                        <div class="about-sec5-container-row-col-number">#3</div>
+                        <div class="about-sec5-container-row-col-number">#<span id="home-segment">3</span></div>
                         <div class="about-sec5-container-row-col-line"></div>
                         <div class="about-sec5-container-row-col-text">*Home Segment Brand Worldwide</div>
                     </div>
