--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
             <div class="home-sec1-container">
                 <div class="home-sec1-container-display">
                     <h2>Our Brand</h2>
-                    <h3>See more,Hear more</h3>
+                    <!-- <h3>See more,Hear more</h3> -->
                     <button><a href="./index.php?page=ourbraud" title="go to our braud page">Find Out More</a></button>
                 </div>
             </div>
@@ -39,7 +39,9 @@
                 </div>
             </div>
         </section>
-        <section class="home-sec4" style="background-image: url(./images/home/sec4-bg.png);">
+        <section class="home-sec4">
+            <div class="home-sec4-bgUpper" style="background-image: url(./images/home/sec4-bg.png);"></div>
+            <div class="home-sec4-bgLower" style="background-image: url(./images/home/sec4-fe.png);"></div>
             <div class="home-sec4-container">
                 <div class="home-sec4-container-display">
                     <h2>
