--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
         <section class="home-sec5">
             <div class="home-sec5-container">
                 <h2>Optoma Design</h2>
-                <h3>Elegace. Complexity Simplified.</h3>
+                <h3>Elegance. Complexity Simplified.</h3>
                 <button><a href="./index.php?page=design">Find Out More</a></button>
                 <div class="home-sec5-container-row">
                     <div class="home-sec5-container-row-col">
