--- a/knowledge.html
+++ b/knowledge.html
@@ -15,18 +15,16 @@
         <div class="knowledge-sec2-container-video">
             <div class="knowledge-sec2_video">
                 <div class="knowledge-sec2_video-buttonGroup">
-                    <button type="button">
-                        <span></span>
-                        <span>
-                            <i></i>
-                        </span>
+                    <button type="button" data-click="popupOpen">
+                        <span id="keyword">keyword</span>
+                        <i></i>
                     </button>
                 </div>
                 <div class="knowledge-sec2_video-row" id="knowledge-area">
                     <!-- <div class="knowledge-sec2_video-row-col">
                         <div class="knowledge-sec2_video-row-col-figure">
                             <figure>
-                                <div></div>
+                                <div><img></div>
                                 <h4></h4>
                                 <p></p>
                             </figure>
@@ -36,5 +34,16 @@
             </div>
         </div>
     </div>
-
 </section>
+
+<div class="popup-document popup-hide" id="popup">
+    <div class="popup-body">
+        <div class="popup-header">
+            <h5>Keyword Selection</h5>
+            <button type="button" data-click="popupClose"><i class="close"></i></button>
+        </div>
+        <div class="popup-main">
+        </div>
+        <div class="popup-footer"></div>
+    </div>
+</div>
